--- a/EnglishVideoStreameriPad/EnglishVideoStreameriPad-Info.plist
+++ b/EnglishVideoStreameriPad/EnglishVideoStreameriPad-Info.plist
@@ -33,6 +33,10 @@
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSMainNibFile~ipad</key>
+	<string>MainWindow</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
