--- a/EnglishVideoStreameriPad/EnglishVideoStreameriPad-Info.plist
+++ b/EnglishVideoStreameriPad/EnglishVideoStreameriPad-Info.plist
@@ -16,11 +16,11 @@
 		<string>Icon@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.learnersCloud.EnglishVideoStreameriPad</string>
+	<string>com.LearnersCloud.EnglishVideoStreameriPad</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>com.learnersCloud.EnglishVideoStreameriPad</string>
+	<string>com.LearnersCloud.EnglishVideoStreameriPad</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
