--- a/EnglishVideoStreameriPad/EnglishVideoStreameriPad-Info.plist
+++ b/EnglishVideoStreameriPad/EnglishVideoStreameriPad-Info.plist
@@ -14,6 +14,7 @@
 		<string>Icon-Small-50.png</string>
 		<string>Icon.png</string>
 		<string>Icon@2x.png</string>
+		<string>Icon@2x~ipad</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.LearnersCloud.EnglishVideoStreameriPad</string>
@@ -24,7 +25,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -37,7 +38,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
